Added properties for e-sig
Re-added in sed to update the MICRONAUT_ENV variables

Changed tarball to include all Java Modules